replace placeholder divs with text area and button div

--- a/index.html
+++ b/index.html
@@ -23,52 +23,69 @@
 
     
     <main class="container">
-
-          <div class="row">
-            <div class="col-1">test1</div>
-            <div class="col-10">test2</div>            
-            <div class="col-1">test3</div>
-          </div>
-          <div class="row">
-            <div class="col-1">test1</div>
-            <div class="col-10">test2</div>            
-            <div class="col-1">test3</div>
-          </div>       
-          <div class="row">
-            <div class="col-1">test1</div>
-            <div class="col-10">test2</div>            
-            <div class="col-1">test3</div>
-          </div>
-          <div class="row">
-            <div class="col-1">test1</div>
-            <div class="col-10">test2</div>            
-            <div class="col-1">test3</div>
-          </div>
-          <div class="row">
-            <div class="col-1">test1</div>
-            <div class="col-10">test2</div>            
-            <div class="col-1">test3</div>
-          </div>
-          <div class="row">
-            <div class="col-1">test1</div>
-            <div class="col-10">test2</div>            
-            <div class="col-1">test3</div>
-          </div>
-          <div class="row">
-            <div class="col-1">test1</div>
-            <div class="col-10">test2</div>            
-            <div class="col-1">test3</div>
-          </div>
-          <div class="row">
-            <div class="col-1">test1</div>
-            <div class="col-10">test2</div>            
-            <div class="col-1">test3</div>
-          </div>
-          <div class="row">
-            <div class="col-1">test1</div>
-            <div class="col-10">test2</div>            
-            <div class="col-1">test3</div>
-          </div>
+      <div class="row">
+        <div class="col-1">9AM</div>
+        <textarea class="col-10 userInput"></textarea>           
+        <button class="col-1 saveBtn">
+          ionic
+        </button>  
+      </div>
+      <div class="row">
+        <div class="col-1">10AM</div>
+        <textarea class="col-10 userInput"></textarea>            
+        <button class="col-1 saveBtn">
+          ionic
+        </button>
+      </div>       
+      <div class="row">
+        <div class="col-1">11AM</div>
+        <textarea class="col-10 userInput"></textarea>            
+        <button class="col-1 saveBtn">
+          ionic
+        </button>
+      </div>
+      <div class="row">
+        <div class="col-1">12PM</div>
+        <textarea class="col-10 userInput"></textarea>            
+        <button class="col-1 saveBtn">
+          ionic
+        </button>
+      </div>
+      <div class="row">
+        <div class="col-1">1PM</div>
+        <textarea class="col-10 userInput"></textarea>            
+        <button class="col-1 saveBtn">
+          ionic
+        </button>
+      </div>
+      <div class="row">
+        <div class="col-1">2PM</div>
+        <textarea class="col-10 userInput"></textarea>            
+        <button class="col-1 saveBtn">
+          ionic
+        </button>
+      </div>
+      <div class="row">
+        <div class="col-1">3PM</div>
+        <textarea class="col-10 userInput"></textarea>            
+        <button class="col-1 saveBtn">
+          ionic
+        </button>
+      </div>
+      <div class="row">
+        <div class="col-1">4PM</div>
+        <textarea class="col-10 userInput"></textarea>            
+        <button class="col-1 saveBtn">
+          ionic
+        </button>
+      </div>
+      <div class="row">
+        <div class="col-1">5PM</div>
+        <textarea class="col-10 userInput"></textarea>            
+        <button class="col-1 saveBtn">
+          ionic
+        </button>
+      </div>
     </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
