--- a/index.html
+++ b/index.html
@@ -19,74 +19,71 @@
       <p id="currentDay" class="lead"></p>
     </header>
 
-
-
-    
-    <main class="container">
-      <div class="row">
-        <div class="col-1">9AM</div>
-        <textarea class="col-10 userInput"></textarea>           
+    <div class="container">
+      <div class="row time-block" id="9">
+        <div class="col-1 hour">9AM</div>
+        <textarea class="col-10 textarea"></textarea>           
         <button class="col-1 saveBtn">
-          ionic
+          <span class="oi oi-lock-locked"></span>
         </button>  
       </div>
-      <div class="row">
-        <div class="col-1">10AM</div>
-        <textarea class="col-10 userInput"></textarea>            
+      <div class="row time-block" id="10">
+        <div class="col-1 hour">10AM</div>
+        <textarea class="col-10 textarea"></textarea>            
         <button class="col-1 saveBtn">
-          ionic
+          <span class="oi oi-lock-locked"></span>
         </button>
       </div>       
-      <div class="row">
-        <div class="col-1">11AM</div>
-        <textarea class="col-10 userInput"></textarea>            
+      <div class="row time-block" id="11">
+        <div class="col-1 hour">11AM</div>
+        <textarea class="col-10 textarea"></textarea>            
         <button class="col-1 saveBtn">
-          ionic
+          <span class="oi oi-lock-locked"></span>
         </button>
       </div>
-      <div class="row">
-        <div class="col-1">12PM</div>
-        <textarea class="col-10 userInput"></textarea>            
+      <div class="row time-block" id="12">
+        <div class="col-1 hour">12PM</div>
+        <textarea class="col-10 textarea"></textarea>            
         <button class="col-1 saveBtn">
-          ionic
+          <span class="oi oi-lock-locked"></span>
         </button>
       </div>
-      <div class="row">
-        <div class="col-1">1PM</div>
-        <textarea class="col-10 userInput"></textarea>            
+      <div class="row time-block" id="1">
+        <div class="col-1 hour">1PM</div>
+        <textarea class="col-10 textarea"></textarea>            
         <button class="col-1 saveBtn">
-          ionic
+          <span class="oi oi-lock-locked"></span>
         </button>
       </div>
-      <div class="row">
-        <div class="col-1">2PM</div>
-        <textarea class="col-10 userInput"></textarea>            
+      <div class="row time-block" id="2">
+        <div class="col-1 hour">2PM</div>
+        <textarea class="col-10 textarea"></textarea>            
         <button class="col-1 saveBtn">
-          ionic
+          <span class="oi oi-lock-locked"></span>
         </button>
       </div>
-      <div class="row">
-        <div class="col-1">3PM</div>
-        <textarea class="col-10 userInput"></textarea>            
+      <div class="row time-block" id="3">
+        <div class="col-1 hour">3PM</div>
+        <textarea class="col-10 textarea"></textarea>            
         <button class="col-1 saveBtn">
-          ionic
+          <span class="oi oi-lock-locked"></span>
         </button>
       </div>
-      <div class="row">
-        <div class="col-1">4PM</div>
-        <textarea class="col-10 userInput"></textarea>            
+      <div class="row time-block" id="4">
+        <div class="col-1 hour">4PM</div>
+        <textarea class="col-10 textarea"></textarea>            
         <button class="col-1 saveBtn">
-          ionic
+          <span class="oi oi-lock-locked"></span>
         </button>
       </div>
-      <div class="row">
-        <div class="col-1">5PM</div>
-        <textarea class="col-10 userInput"></textarea>            
+      <div class="row time-block" id="5">
+        <div class="col-1 hour">5PM</div>
+        <textarea class="col-10 textarea"></textarea>            
         <button class="col-1 saveBtn">
-          ionic
+          <span class="oi oi-lock-locked"></span>
         </button>
       </div>
-    </main>
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
