--- a/index.html
+++ b/index.html
@@ -23,65 +23,47 @@
       <div class="row time-block" id="9">
         <div class="col-1 hour">9AM</div>
         <textarea class="col-10 textarea"></textarea>           
-        <button class="col-1 saveBtn">
-          <span class="oi oi-lock-locked"></span>
-        </button>  
+        <button class="col-1 saveBtn"><i class="far fa-save"></i></button> 
       </div>
       <div class="row time-block" id="10">
         <div class="col-1 hour">10AM</div>
         <textarea class="col-10 textarea"></textarea>            
-        <button class="col-1 saveBtn">
-          <span class="oi oi-lock-locked"></span>
-        </button>
+        <button class="col-1 saveBtn"><i class="far fa-save"></i></button>
       </div>       
       <div class="row time-block" id="11">
         <div class="col-1 hour">11AM</div>
         <textarea class="col-10 textarea"></textarea>            
-        <button class="col-1 saveBtn">
-          <span class="oi oi-lock-locked"></span>
-        </button>
+        <button class="col-1 saveBtn"><i class="far fa-save"></i></button>
       </div>
       <div class="row time-block" id="12">
         <div class="col-1 hour">12PM</div>
         <textarea class="col-10 textarea"></textarea>            
-        <button class="col-1 saveBtn">
-          <span class="oi oi-lock-locked"></span>
-        </button>
+        <button class="col-1 saveBtn"><i class="far fa-save"></i></button>
       </div>
-      <div class="row time-block" id="1">
+      <div class="row time-block" id="13">
         <div class="col-1 hour">1PM</div>
         <textarea class="col-10 textarea"></textarea>            
-        <button class="col-1 saveBtn">
-          <span class="oi oi-lock-locked"></span>
-        </button>
+        <button class="col-1 saveBtn"><i class="far fa-save"></i></button>
       </div>
-      <div class="row time-block" id="2">
+      <div class="row time-block" id="14">
         <div class="col-1 hour">2PM</div>
         <textarea class="col-10 textarea"></textarea>            
-        <button class="col-1 saveBtn">
-          <span class="oi oi-lock-locked"></span>
-        </button>
+        <button class="col-1 saveBtn"><i class="far fa-save"></i></button>
       </div>
-      <div class="row time-block" id="3">
+      <div class="row time-block" id="15">
         <div class="col-1 hour">3PM</div>
         <textarea class="col-10 textarea"></textarea>            
-        <button class="col-1 saveBtn">
-          <span class="oi oi-lock-locked"></span>
-        </button>
+        <button class="col-1 saveBtn"><i class="far fa-save"></i></button>
       </div>
-      <div class="row time-block" id="4">
+      <div class="row time-block" id="16">
         <div class="col-1 hour">4PM</div>
         <textarea class="col-10 textarea"></textarea>            
-        <button class="col-1 saveBtn">
-          <span class="oi oi-lock-locked"></span>
-        </button>
+        <button class="col-1 saveBtn"><i class="far fa-save"></i></button>
       </div>
-      <div class="row time-block" id="5">
+      <div class="row time-block" id="17">
         <div class="col-1 hour">5PM</div>
         <textarea class="col-10 textarea"></textarea>            
-        <button class="col-1 saveBtn">
-          <span class="oi oi-lock-locked"></span>
-        </button>
+        <button class="col-1 saveBtn"><i class="far fa-save"></i></button>
       </div>
     </div>
 
@@ -91,5 +73,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
